--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
         font-weight: normal;
       }
       h1 {
+        font-size: 24px;
         margin: 0 auto;
-        max-width: 22em;
+        max-width: 16em;
       }
       ol,
       ul {
-        padding-left: 1em;
+        /* padding-left: 1em; */
       }
       a {
         color: #ab3a56;
@@ -59,15 +60,19 @@
         margin: 1em auto;
         padding: 0 0.8em;
       }
+      #starter-animation {
+        width: 256px;
+        margin: 0 auto;
+      }
       #animation-1 {
         width: 256px;
         margin: 0 auto;
       }
-      .example {
-        width: 100px;
-        height: 100px;
-        background-color: lightgray;
-        display: inline-block;
+      pre code strong {
+        /* color: #008a05; */
+      }
+      pre code em {
+        /* color: #008a05; */
       }
     </style>
     <script src="https://unpkg.com/pixel-animator/main.js"></script>
@@ -75,8 +80,7 @@
   <body>
     <header>
       <h1>
-        Pixel Animator is a toy for animating generative pixel art with
-        JavaScript.
+        Pixel Animator is a toy for making small generative art with JavaScript
       </h1>
     </header>
     <main>
@@ -84,101 +88,86 @@
       <h2 id="get-started">Quick Start</h2>
 
       <p>
-        If you want to jump right in, make a copy of the "boring" template
-        animation on
+        If you want to dive in, make a copy of the starter template on
         <a href="https://codepen.io/grough/pen/JjdoYoa?editors=1000">CodePen</a>
         or
         <a href="https://glitch.com/edit/#!/remix/pixel-animator-template"
           >Glitch</a
-        >.
+        >. For best results, read the tutorial below.
       </p>
-
-      <!-- <h2 id="intro">Introduction</h2>
-
-      <p>
-        Pixel Animator is for making low-res generative art by writing
-        JavaScript code. It's not a drawing tool. It's more of a visual
-        calculator.
-      </p>
-
-      <p>
-        It's kind of like graphics programming but less powerful and more fun.
-      </p>
-
-      <p>
-        It's low-resoluton by design. The default animation is 16 x 16 pixels in
-        size running at 8 frames per second.
-      </p>
-
-      <p>
-        The library's source code can be found on
-        <a href="https://github.com/grough/pixel-animator">GitHub</a>.
-      </p>
-
-      <h2 id="examples">Examples</h2>
-
-      <p>
-        Below are a few examples of things made with Pixel Animator. Touch each
-        example to play it.
-      </p>
-
-      <div class="examples">
-        <div class="example"></div>
-        <div class="example"></div>
-        <div class="example"></div>
-        <div class="example"></div>
-      </div> -->
 
       <h2 id="tutorial">Tutorial</h2>
 
-      <h3>Create an HTML Document</h3>
+      <h3>1. Create an HTML Document</h3>
 
       <p>
-        To start, you'll need an HTML document like the example below and a
-        modern web browser to view it with. You could copy the HTML into your
-        own page, or just start with a working template.
+        To start, you will need an HTML document like the one below. You can
+        copy this exact code into your editor, save it, then view it in a
+        browser to get a working example.
       </p>
 
-      <ul>
+      <!-- <ul>
         <li>New HTML document</li>
         <li>Load the Pixel Animator JavaScript library</li>
         <li>Add an element to your HTML document</li>
         <li>Call the Pixel Animator library</li>
-      </ul>
+      </ul> -->
 
       <pre>
 <code>
 &lt;html&gt;
   &lt;head&gt;
-    &lt;!-- Load the Pixel Animator library --&gt;
-    &lt;script src=&quot;https://unpkg.com/pixel-animator/main.js&quot;&gt;&lt;/script&gt;
+    <strong>&lt;!-- Load the Pixel Animator library --&gt;</strong>
+    <em>&lt;script src=&quot;https://unpkg.com/pixel-animator/main.js&quot;&gt;&lt;/script&gt;</em>
   &lt;/head&gt;
   &lt;body&gt;
-    &lt;!-- Add an element to host your animation --&gt;
-    &lt;div id=&quot;my-animation&quot;&gt;&lt;/div&gt;
+    <strong>&lt;!-- Add an element to host your animation --&gt;</strong>
+    <em>&lt;div id=&quot;my-animation&quot;&gt;&lt;/div&gt;</em>
     &lt;script&gt;
-      // Connect it all together to render a default animation
-      PixelAnimator({}, document.getElementById(&quot;my-animation&quot;));
+      <strong>// Connect it all together to display a starter animation</strong>
+      <em>PixelAnimator({}, document.getElementById(&quot;my-animation&quot;));</em>
     &lt;/script&gt;
   &lt;/body&gt;
 &lt;/html&gt;
 </code>
     </pre>
+      <!-- <p>If it worked, you should see the starter animation on your page:</p> -->
+
+      <div id="starter-animation"></div>
+
+      <p>We passed two arguments to the <code>PixelAnimator</code> function:</p>
+
+      <ol>
+        <li>
+          The empty object <code>{}</code> which gives us a boring checkerboard
+          animation
+        </li>
+        <li>An HTML element for the animation to live inside</li>
+      </ol>
+
       <p>
-        If it worked, you should see a default animation on your page: [The
-        default checkerboard animation]
+        The rest of this tutorial is about that first argument, the empty
+        object, and how we can add properties that will give us a more
+        interesting animation.
       </p>
+
       <p>
-        We passed two arguments to the <code>PixelAnimator</code> function.
-        First is the empty object <code>{}</code> which gives us a default
-        animation. Second is an HTML element for the animation to live inside.
-        We can modify the empty animation object <code>{}</code> to render
-        something more interesting. The rest of this tutorial is about a
-        property on the animation object named <code>colorize</code>, which will
-        be assigned a special type of function that decides how to color each
-        pixel in the animation.
+        The only required property is a function named <code>shader</code>. This
+        function takes a pixel's position in space time as input and returns a
+        color as output.
       </p>
-      <h3>Writing a <code>colorize</code> function</h3>
+
+      <pre>
+<code>
+{
+  shader: function(pixel) {
+    // Compute a color…
+  }
+}
+</code>
+</pre>
+
+      <h3>2. Write a <code>shader</code> function</h3>
 
       <p>
         To make an animation, you need to write a special kind of function named
@@ -195,11 +184,7 @@
         >.
       </p>
 
-      <h3>0. The default animation</h3>
-
-      <p>…</p>
-
-      <h3>1. A purple square</h3>
+      <h3>2.1. A purple square</h3>
 
       <img
         src="https://github.com/grough/pixel-animator/wiki/example-1-1-square.gif"
@@ -232,7 +217,7 @@ PixelAnimator({ colorize }, document.getElementById("my-animation"));
         >
       </p>
 
-      <h3>2. Lime row on a purple square</h3>
+      <h3>2.2. Lime row on a purple square</h3>
 
       <img
         src="https://github.com/grough/pixel-animator/wiki/example-1-2-row.gif"
@@ -269,7 +254,7 @@ function colorize(pixel) {
         >
       </p>
 
-      <h3>3. Lime dot on a purple square</h3>
+      <h3>2.3. Lime dot on a purple square</h3>
 
       <img
         src="https://github.com/grough/pixel-animator/wiki/example-1-3-dot.gif"
@@ -310,7 +295,7 @@ function colorize(pixel) {
         >
       </p>
 
-      <h3>4. Blinking lime dot on a purple square</h3>
+      <h3>2.4. Blinking lime dot on a purple square</h3>
 
       <img
         src="https://github.com/grough/pixel-animator/wiki/example-1-4-blinking-dot.gif"
@@ -323,6 +308,18 @@ function colorize(pixel) {
           number, color me lime. If not, color me purple</em
         >.
       </p>
+
+      <pre>
+<code>
+function colorize({ column, row, frame }) {
+  if (row == 2 && column == 5 && frame % 2 == 0) {
+    return "lime";
+  } else {
+    return "purple";
+  }
+}
+</code>
+</pre>
 
       <p>
         This step adds a third part to the question asking about which frame the
@@ -348,7 +345,7 @@ function colorize(pixel) {
         >
       </p>
 
-      <h3>5. Lime dot moving across a purple square</h3>
+      <h3>2.5. Lime dot moving across a purple square</h3>
       <img
         src="https://github.com/grough/pixel-animator/wiki/example-1-5-moving-dot.gif"
       />
@@ -381,6 +378,7 @@ function colorize({ column, row, frame }) {
         >
       </p>
     </main>
+    <script src="./starter-animation.js"></script>
     <script src="./animation-1.js"></script>
   </body>
 </html>
