Specify version 1 in JS path

--- a/index.html
+++ b/index.html
@@ -3,11 +3,6 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Lilac Loop is a free plugin for VCV Rack inspired by the recording
-    style of a live looping pedal."
-    />
     <title>Make Generative Pixel Art with JavaScript</title>
     <style>
       body {
@@ -106,19 +101,12 @@
         browser to get a working example.
       </p>
 
-      <!-- <ul>
-        <li>New HTML document</li>
-        <li>Load the Pixel Animator JavaScript library</li>
-        <li>Add an element to your HTML document</li>
-        <li>Call the Pixel Animator library</li>
-      </ul> -->
-
       <pre>
 <code>
 &lt;html&gt;
   &lt;head&gt;
     <strong>&lt;!-- Load the Pixel Animator library --&gt;</strong>
-    <em>&lt;script src=&quot;https://unpkg.com/pixel-animator/main.js&quot;&gt;&lt;/script&gt;</em>
+    <em>&lt;script src=&quot;https://unpkg.com/pixel-animator@1/main.js&quot;&gt;&lt;/script&gt;</em>
   &lt;/head&gt;
   &lt;body&gt;
     <strong>&lt;!-- Add an element to host your animation --&gt;</strong>
