Use CodePen template URL

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
       <p>
         If you want to dive in, make a copy of the starter template on
-        <a href="https://codepen.io/grough/pen/JjdoYoa?editors=1000">CodePen</a>
+        <a href="https://codepen.io/pen?template=JjdoYoa&editors=1000">CodePen</a>
         or
         <a href="https://glitch.com/edit/#!/remix/pixel-animator-template"
           >Glitch</a
